--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background: url('diabetes.jpeg') no-repeat center center/cover;
+            background: url('https://imgur.com/a/y3Ininj') no-repeat center center/cover;
             display: flex;
             justify-content: center;
             align-items: center;
